# pytorch-fsspec-dataset

./: .gitignore  pyproject.toml
pytorch_fsspec_dataset/: dataset.py
tests/: test_dataset.py
