[tool.poetry]
name = "pytorch-fsspec-dataset"
version = "0.1.0"
description = ""
authors = ["koreander2001 <neokamiyama@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_fsspec_dataset"}]

[tool.poetry.dependencies]
python = "^3.10"
fsspec = "^2023.1.0"
torch = "^1.13.1"
torchvision = "^0.14.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
